docker/kubernetes/couchdb/couch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: couchdb-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
      - name: couchdb-c1
        image: couchdb:3.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5984
        volumeMounts:
        - name: couchdb-data
          mountPath: /opt/couchdb/data
      volumes:
        - name: couchdb-data
          persistentVolumeClaim:
            claimName: couch-pvc
