docker/kubernetes/couchdb/couch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb-service
spec:
  type: NodePort
  selector:
    app: couchdb
  ports:
  - protocol: TCP
    port: 5984
    targetPort: 5984
