docker/kubernetes/couchdb/couch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb-ingress
spec:
  rules:
  - host: mycouchdb.localhost
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: couchdb-service
            port:
              number: 5984
